# StudyNotes

./: .gitignore  Numbers Everyone should know.md  README.md  helperTool.md  遇到过的困难.md
CSAPP/: 1. Bits,Bytes,Integer.md  2. Floats.md
CUDA/: 1. 基础知识.md  2. CUDA编程基础.md  2.1 cuda基础_复习随笔.md  2.2 cuda八股自整理版.md  3. CUDA 算子加速.md  PTX instructions.md  cublas.md  常用函数.md
Cmake/: 2.Cmake_从基础到中级-还是迷迷糊糊.md  3. Cmake_三探.md  3. Cmake_感觉大彻大悟了.md  4. Cmake_四探_从最简cmake开始.md  Cmake.md
Cmake/BuildProject_way3/: CMakeLists.txt  main.cpp
Cmake/BuildProject_way3/animal/: CMakeLists.txt  dog.cpp
Cmake/Call_Static_Shared_library/: CMakeLists.txt  main.cpp
Cmake/Call_Static_Shared_library/include/: dog.h
Cmake/Cmakewithsourcecode/: CMakeLists.txt  config.h.in
Cmake/Static_Shared_library/: CMakeLists.txt
Cmake/Static_Shared_library/include/: cat.h
DLrush/: 拉格朗日对偶.md
Docker/: Docker.md
Linux 从零/: 安装.md
OperatingSystemAndLinuxKernelProgramming/: Path.md
UE5/: 1. 常用快捷键.md  1. 蓝图基础.md
UnixTools/: Unix,Linux中的重定向操作符.md  bash.md  gdb调试.md  grep_sed_awk_and_RegularExpression.md
c++/: 1. Introduction and Setup.md  10. Characters and Strings.md  11. Functions.md  12. Pointers and References.md  13.Object-Oriented Programming-Classes and Objects.md  14. Overload Operator.md  15. Inheritance.md  16. Polymorphism.md  17. Smart Pointers.md  18. Exception Handling.md  19. IO and Streams.md  2. Installation.md  20. STL.md  21. Lambda expression.md  22.Modern C++.md  23. Lock-free data structure.md  24. Thread Pool.md  3. CodeLite setting.md  4. Errors and warnings.md  5. Structure of C++ program.md  6. Variables and Constants.md  7.Arrays and vectors.md  8. Statements and Operators.md  9. Controlling Program Flow.md  C++ 28种未定义行为.md  C++知识点总览.md  Coroutine.md  alignas.md  extern,static,全局变量.md  template.md  一点对于多级指针的思考.md  专题-const.md  泛型编程.md  继承，多态与Constructor,Destructor.md  编译时常量.md
leetcode/: ez-1.两数之和.md  ez-13. 罗马数字转整数.md  ez-14.最长公共前缀.md  ez-20.有效的括号.md  ez-21. 合并两个有序列表-递归.md  ez-26. 删除有序数组中的重复项.md  ez-27.移除元素.md  ez-58. 最后一个单词的长度.md  ez-66. 加一.md  ez-67. 二进制求和.md  ez-9. 回文数.md  notsoez-35. 搜索插入位置-二分边界.md
八股/: 操作系统.md  计算机网络.md
并行计算/: 1. 介绍.md  2. HPC必须知道的那些事.md  2. 搭建HPC环境.md  3.性能极限分析.md  4. 数据设计和性能模型.md  5.并行算法与模式-来自ECE408.md
数据结构与算法/: 1.数组和字符串.md  2. 排序算法.md  Container.md  Graph AtoZ.md  HW机试.md  STL Algorithms.md  动态规划.md  (+6 more)
(+251 files in other folders)
